--- a/app/src/main/res/layout/layout_location_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_location_item_bottom_sheet.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomSheet"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:behavior_hideable="true"
+    app:behavior_hideable="false"
     android:background="@color/white"
     app:behavior_peekHeight="0dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
@@ -27,48 +28,40 @@
                 android:layout_margin="16dp"
                 android:background="@drawable/view_scroller_bottom_sheet" />
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="12dp"
-                android:text="SHARE"
+                android:text="SELECT DROP OFF LOCATION"
                 android:fontFamily="@font/nunito_sans_extra_bold"
-                android:letterSpacing="0.4"
                 android:textSize="14sp"
                 android:textColor="@color/deep_blue"/>
 
-            <TextView
-                android:id="@+id/value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="18dp"
-                android:layout_gravity="center"
-                android:text="Share with friends to earn more"
-                android:fontFamily="@font/nunito_sans_regular"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="#979797" />
-
-            <include layout="@layout/item_product"/>
-
-            <include layout="@layout/item_add_profit"/>
-
-            <include layout="@layout/item_show_receipt"/>
-
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_share"
+            <SearchView
+                android:id="@+id/searchView"
                 android:layout_width="match_parent"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_background_shape"
-                android:text="@string/share_product"
-                android:visibility="visible"
-                android:textColor="@color/white"
-                android:fontFamily="@font/poppins_bold"
-                android:textSize="15sp"
-                android:paddingRight="24dp"
-                android:paddingLeft="24dp"/>
+                android:layout_margin="10dp"
+                android:background="#55F5F5F5"
+                android:elevation="1dp"
+                android:queryHint="Search" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_Location"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_location" />
+
+            </LinearLayout>
+
+
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
