--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_height="wrap_content">
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -22,7 +22,8 @@
                 android:layout_marginStart="10dp"
                 android:background="?attr/colorPrimary"
                 android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                tools:ignore="MissingConstraints">
 
                 <ImageView
                     android:id="@+id/Image_backword"
@@ -48,143 +49,155 @@
 
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:layout_constraintTop_toBottomOf="@id/toolbar"
+                android:padding="12sp"
                 android:orientation="vertical"
-                android:layout_below="@id/toolbar">
-
-
-
-
-
-                <RelativeLayout
+                tools:ignore="MissingConstraints">
+                <TextView
+                    android:id="@+id/t1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="30dp">
+                    android:text="@string/order_id"
+                    android:textSize="14sp"
+                    android:fontFamily="@font/poppins_bold"
+                    android:textColor="#223263"
+                    android:letterSpacing="0.02"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_marginTop="12dp"/>
+
+
+                <TextView
+                    android:id="@+id/my_order1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="15dp"
+                    android:text="Order at Lafyuu : August 1, 2017"
+                    android:textSize="16sp" />
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="12sp"
+                    android:paddingTop="8sp"
+                    android:paddingEnd="12sp">
 
                     <TextView
-                        android:id="@+id/t2"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/my_order2"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="LQNSU346JK"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/poppins_bold"
-                        android:textColor="#223263"
-                        android:letterSpacing="0.02"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginTop="12dp"/>
-
-                    <TextView
-                        android:id="@+id/my_orders1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Order at Lafyuu : August 1, 2017"
-                        android:layout_marginStart="15dp"
-                        android:layout_below="@id/t2"
-                        android:textSize="16sp"
-                        android:layout_marginTop="15dp"/>
-
-                    <TextView
-                        android:id="@+id/my_orders2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
                         android:text="Order Status"
-                        android:layout_marginStart="15dp"
-                        android:layout_below="@id/my_orders1"
-                        android:textSize="16sp"
-                        android:layout_marginTop="15dp"/>
+                        android:textSize="16sp" />
+
 
                     <TextView
-                        android:id="@+id/shipping"
+                        android:id="@+id/shippingone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="end"
                         android:text="Shipping"
-                        android:layout_marginStart="170dp"
-                        android:layout_toEndOf="@id/my_orders2"
-                        android:textSize="13sp"
                         android:textColor="@color/black"
-                        android:layout_marginTop="90dp"/>
-                    <TextView
-                        android:id="@+id/my_orders3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Items"
-                        android:layout_marginStart="15dp"
-                        android:layout_below="@id/my_orders2"
-                        android:textSize="16sp"
-                        android:layout_marginTop="15dp"/>
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="12sp"
+                    android:paddingTop="8sp"
+                    android:paddingEnd="12sp">
 
                     <TextView
-                        android:id="@+id/Items"
+                        android:id="@+id/my_order3"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Items"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/Itemone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2 Items purchased"
-                        android:layout_marginStart="165dp"
-                        android:layout_toEndOf="@id/my_orders3"
-                        android:textSize="13sp"
                         android:textColor="@color/black"
-                        android:layout_marginTop="130dp"/>
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="12sp"
+                    android:paddingTop="8sp"
+                    android:paddingEnd="12sp">
+
                     <TextView
-                        android:id="@+id/my_orders4"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/my_order4"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Profit from customer"
-                        android:layout_marginStart="15dp"
-                        android:layout_below="@id/my_orders3"
-                        android:textSize="16sp"
-                        android:layout_marginTop="15dp"/>
+                        android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/profit_from_customer"
+                        android:id="@+id/profit_from_customerone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/nunito_sans_extra_bold"
                         android:text="₵67.90"
-                        android:layout_marginStart="120dp"
-                        android:layout_toEndOf="@id/my_orders4"
-                        android:textSize="13sp"
-                        android:fontFamily="@font/nunito_sans_extra_bold"
                         android:textColor="#1099EE"
-                        android:layout_marginTop="170dp"/>
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingStart="12sp"
+                    android:paddingTop="8sp"
+                    android:paddingEnd="12sp">
 
                     <TextView
-                        android:id="@+id/my_orders5"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/my_order5"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:text="Price"
-                        android:layout_marginStart="15dp"
-                        android:layout_below="@id/my_orders4"
-                        android:textSize="16sp"
-                        android:layout_marginTop="15dp"/>
+                        android:textSize="16sp" />
 
                     <TextView
-                        android:id="@+id/price"
+                        android:id="@+id/priceone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="$299,43"
-                        android:layout_marginStart="235dp"
-                        android:layout_toEndOf="@id/my_orders5"
-                        android:textSize="13sp"
                         android:fontFamily="@font/nunito_sans_extra_bold"
+                        android:text="$299,43"
                         android:textColor="#1099EE"
-                        android:layout_marginTop="210dp"/>
-
-                </RelativeLayout>
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <Button
                     android:id="@+id/Edit_Order_Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginStart="30dp"
-                    android:layout_marginEnd="30dp"
-                    android:background="@drawable/ratings_button"
-                    android:text="Edit Order Details"
-                    android:textAllCaps="false"/>
-
+                    android:text="Check Order Details"
+                    android:textAllCaps="false"
+                    android:background="@drawable/button_background_shape"
+                    android:fontFamily="@font/nunito_sans_extra_bold"
+                    android:textSize="@dimen/dimen_16"
+                    android:layout_margin="@dimen/font_size_24"/>
             </LinearLayout>
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
